@@ -31,10 +31,11 @@ ENDIF(WIN32)
 add_library(${TARGET} MODULE ${SRCS})
 
 target_link_libraries(${TARGET}
-	${Boost_FILESYSTEM_LIBRARY}
 	${NSCP_DEF_PLUGIN_LIB}
+	${Boost_FILESYSTEM_LIBRARY}
 	${Boost_PROGRAM_OPTIONS_LIBRARY}
 	${Boost_THREAD_LIBRARY}
+	${Boost_REGEX_LIBRARY}
 	${NSCP_FILTER_LIB}
 	expression_parser
 )
